--- a/index.html
+++ b/index.html
@@ -14,14 +14,42 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
 <header>
-
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand page-title" href="#">Movie Explorer</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <div class="nav navbar-text navbar-right githubfork"><a class="navbar-link" href="https://github.com/pakwan/MovieExplorer">Fork me on Github</a></div>
+            </div>
+        </div>
+    </nav>
 </header>
-<main>
-    <section>Test</section>
+<main class="container-fluid">
+    <div id="mainRow" class="row full-height">
+        <aside id="leftFilters" class="filter-area col-sm-2 full-height">
+            <h3>Filters</h3>
+            <div>
+                <h4>Minimum Age</h4>
+                <div>0 1 5 10 18</div>
+            </div>
+        </aside>
+        <section id="centralScatterplotArea" class="col-sm-7 full-height no-padding">
+            <div id="scatterplot" class="scatterPlot">
 
+            </div>
+            <div id="yearFilter" class="yearFilter filter-area"></div>
+        </section>
+        <aside id="rightFilters" class="filter-area col-sm-3 full-height">
+
+        </aside>
+    </div>
 </main>
 <footer></footer>
 </body>
