--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <!--D3-->
     <script src="https://d3js.org/d3.v4.js"></script>
 
-    <!--My JavaScript-->
-    <script src="js/main.js"></script>
+
 </head>
 <body>
 <header>
@@ -30,7 +29,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand page-title" href="#">Movie Explorer</a>
-                <img class="loadingIcon navbar-brand spinning-animation" src="img/spinner.png">
+                <img class="loadingIcon navbar-brand spinning-animation hidden" src="img/spinner.png">
             </div>
             <div class="collapse navbar-collapse">
                 <div class="nav navbar-text navbar-right githubfork"><a class="navbar-link" href="https://github.com/pakwan/MovieExplorer">Fork me on Github</a></div>
@@ -58,5 +57,9 @@
     </div>
 </main>
 <footer></footer>
+
+
+<!--My JavaScript-->
+<script src="js/main.js"></script>
 </body>
 </html>
