Implement first draft of scatterplot (black dots with constant size and the axes are wrongly positioned and inversed)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
+                <a href="#"><img class="top-logo navbar-brand" src="img/favicon.png"></a>
                 <a class="navbar-brand page-title" href="#">Movie Explorer</a>
                 <img class="loadingIcon navbar-brand spinning-animation hidden" src="img/spinner.png">
             </div>
@@ -47,7 +48,7 @@
             </div>
         </aside>
         <section id="centralScatterplotArea" class="col-sm-7 full-height no-padding">
-            <div id="scatterplot" class="scatterPlot">
+            <div id="scatterPlot" class="scatterPlot">
             </div>
             <div id="yearFilter" class="yearFilter filter-area"></div>
         </section>
