--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Visualization of a movie data set from IMDb">
     <meta name="keywords" content="Visualization, D3, Movies, Films, Interactive, IMDb">
     <meta name="author" content="PW">
-    <meta name="" content="PW">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
     <link rel="icon" sizes="192x192" href="img/favicon.png">
@@ -30,7 +29,8 @@
             <div class="navbar-header">
                 <a href="#"><img class="top-logo navbar-brand" src="img/favicon.png"></a>
                 <a class="navbar-brand page-title" href="#">Movie Explorer</a>
-                <img class="loadingIcon navbar-brand spinning-animation hidden" src="img/spinner.png">
+                <!--<img class="loadingIcon navbar-brand spinning-animation hidden" src="img/spinner.png">-->
+                <img class="loadingIcon navbar-brand spinning-animation hidden" src="img/loading.svg">
             </div>
             <div class="collapse navbar-collapse">
                 <div class="nav navbar-text navbar-right githubfork"><a class="navbar-link" href="https://github.com/pakwan/MovieExplorer">Fork me on Github</a></div>
