Replace loading spinner

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="#"><img class="top-logo navbar-brand" src="img/favicon.png"></a>
                 <a class="navbar-brand page-title" href="#">Movie Explorer</a>
                 <!--<img class="loadingIcon navbar-brand spinning-animation hidden" src="img/spinner.png">-->
-                <img class="loadingIcon navbar-brand spinning-animation hidden" src="img/loading.svg">
+                <img class="loadingIcon navbar-brand spinning-animation hidden" src="img/loading2.svg">
             </div>
             <div class="collapse navbar-collapse">
                 <div class="nav navbar-text navbar-right githubfork"><a class="navbar-link" href="https://github.com/pakwan/MovieExplorer">Fork me on Github</a></div>
