--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <!--My CSS-->
     <link rel="stylesheet" href="css/main.css">
 
-    <!--D3-->
-    <script src="https://d3js.org/d3.v4.js"></script>
 
+
+    <!--Multi-Handle-Slider-->
+    <link rel="stylesheet" href="lib/nouislider.min.css">
 
 </head>
 <body>
@@ -44,7 +45,11 @@
             <h3>Filters</h3>
             <div>
                 <h4>Minimum Age</h4>
-                <div>0 1 5 10 18</div>
+                <div id="minimumAgeSlider"></div>
+                <div class="row">
+                    <!--<span id="minimumAgeSliderMin" class="filter-info col-sm-1">0</span>-->
+                    <!--<span id="minimumAgeSliderMax" class="pull-right filter-info col-sm-1">18</span>-->
+                </div>
             </div>
         </aside>
         <section id="centralScatterplotArea" class="col-sm-7 full-height no-padding">
@@ -60,7 +65,12 @@
 <footer></footer>
 
 
-<!--My JavaScript-->
+<!--Load Javascript-->
+<!--D3-->
+<script src="https://d3js.org/d3.v4.js"></script>
+<!--Multi-Handle-Slider-->
+<script src="lib/nouislider.min.js"></script>
+<!--My script-->
 <script src="js/main.js"></script>
 </body>
 </html>
