--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div id="famousSlider"></div>
             </div>
             <div>
-                <h4>Gross per Budget</h4>
+                <h4>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1. Keep that in mind when excluding movies with this slider.">?</span></h4>
                 <div id="grossBudgetSlider"></div>
             </div>
             <div>
