Implement correct filtering inclusive color coded background (several bugs fixed)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div id="grossBudgetSlider"></div>
             </div>
             <div>
-                <h4>Social Media Popilarity</h4>
+                <h4>Social Media Popularity</h4>
                 <div id="socialMediaSlider"></div>
             </div>
         </aside>
