Filter UI adjustments

--- a/index.html
+++ b/index.html
@@ -44,31 +44,27 @@
     <div id="mainRow" class="row full-height">
         <aside id="leftFilters" class="filter-area col-sm-2 full-height">
             <h3>Filters</h3>
-            <div>
+            <div class="filterContainer">
                 <h4>Minimum Age</h4>
                 <div id="minimumAgeSlider"></div>
-                <!--<div class="row">-->
-                    <!--<span id="minimumAgeSliderMin" class="filter-info col-sm-1">0</span>-->
-                    <!--<span id="minimumAgeSliderMax" class="pull-right filter-info col-sm-1">18</span>-->
-                <!--</div>-->
             </div>
-            <div>
+            <div class="filterContainer">
                 <h4>Score</h4>
                 <div id="scoreSlider"></div>
             </div>
-            <div>
+            <div class="filterContainer">
                 <h4>Duration</h4>
                 <div id="durationSlider"></div>
             </div>
-            <div>
+            <div class="filterContainer">
                 <h4>Famousness</h4>
                 <div id="famousSlider"></div>
             </div>
-            <div>
+            <div class="filterContainer">
                 <h4>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1. Keep that in mind when excluding movies with this slider.">?</span></h4>
                 <div id="grossBudgetSlider"></div>
             </div>
-            <div>
+            <div class="filterContainer">
                 <h4>Social Media Popularity</h4>
                 <div id="socialMediaSlider"></div>
             </div>
