Add movie selection (clicking on movies)

--- a/index.html
+++ b/index.html
@@ -75,7 +75,21 @@
             <div id="yearFilter" class="yearFilter filter-area"></div>
         </section>
         <aside id="rightFilters" class="filter-area col-sm-3 full-height .text-center">
-
+            <div class="filterScatterplot"></div>
+            <div class="rightSidebarInfos">
+                <div id="movieInfos">
+                    <a id="movieTitleLink"><h4 id="movieTitle"></h4></a>
+                    <table id="movieInfosTable">
+                        <tr><th>Year</th><td id="tableYear"></td></tr>
+                        <tr><th>Country</th><td id="tableCountry"></td></tr>
+                        <tr><th>Duration</th><td id="tableDuration"></td></tr>
+                        <tr><th>Genres</th><td id="tableGenres"></td></tr>
+                    </table>
+                    <div id="similarMovies"></div>
+                    <div id="moreRelatedMovies"></div>
+                </div>
+                <div id="shortcuts"></div>
+            </div>
         </aside>
     </div>
 </main>
