Add similar movies and format right bar

--- a/index.html
+++ b/index.html
@@ -81,14 +81,24 @@
                     <a id="movieTitleLink"><h4 id="movieTitle"></h4></a>
                     <table id="movieInfosTable">
                         <tr><th>Year</th><td id="tableYear"></td></tr>
+                        <tr><th>Director</th><td id="tableDirector"></td></tr>
                         <tr><th>Country</th><td id="tableCountry"></td></tr>
                         <tr><th>Duration</th><td id="tableDuration"></td></tr>
                         <tr><th>Genres</th><td id="tableGenres"></td></tr>
+                        <tr><th>Actors</th><td id="tableActors1"></td></tr>
+                        <tr><th></th><td id="tableActors2"></td></tr>
+                        <tr><th></th><td id="tableActors3"></td></tr>
                     </table>
-                    <div id="similarMovies"></div>
+                    <h5>Similar Movies</h5><div id="similarMovies"></div>
                     <div id="moreRelatedMovies"></div>
                 </div>
-                <div id="shortcuts"></div>
+                <div id="shortcuts">
+                    <h5>Shortcuts</h5>
+                    <button>Reset</button>
+                    <button>Classics</button>
+                    <button>Shortfilms</button>
+                    <button>Blockbuster</button>
+                </div>
             </div>
         </aside>
     </div>
