Add preselection shortcuts

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                 </div>
                 <div id="shortcuts">
                     <h5>Shortcuts</h5>
-                    <button>Reset</button>
-                    <button>Classics</button>
-                    <button>Shortfilms</button>
-                    <button>Blockbuster</button>
+                    <button onclick="reload()">Reset</button>
+                    <button onclick="loadClassicsSettings()">Classics</button>
+                    <button onclick="loadShortfilmsSettings()">Shortfilms</button>
+                    <button onclick="loadBlockbusterSettings()">Blockbuster</button>
                 </div>
             </div>
         </aside>
