--- a/index.html
+++ b/index.html
@@ -43,36 +43,42 @@
 <main class="container-fluid">
     <div id="mainRow" class="row full-height">
         <aside id="leftFilters" class="filter-area col-sm-2 full-height">
+            <div id="visibleMoviesCounter"></div>
             <h3>Filters</h3>
             <div class="filterContainer">
-                <h4>Minimum Age</h4>
+                <h5>Minimum Age</h5>
                 <div id="minimumAgeSlider"></div>
             </div>
             <div class="filterContainer">
-                <h4>Score</h4>
+                <h5>Score</h5>
                 <div id="scoreSlider"></div>
             </div>
             <div class="filterContainer">
-                <h4>Duration</h4>
+                <h5>Duration</h5>
                 <div id="durationSlider"></div>
             </div>
             <div class="filterContainer">
-                <h4>Famousness</h4>
+                <h5>Famousness</h5>
                 <div id="famousSlider"></div>
             </div>
             <div class="filterContainer">
-                <h4>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1. Keep that in mind when excluding movies with this slider.">?</span></h4>
+                <h5>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1. Keep that in mind when excluding movies with this slider.">?</span></h5>
                 <div id="grossBudgetSlider"></div>
             </div>
             <div class="filterContainer">
-                <h4>Social Media Popularity</h4>
+                <h5>Social Media Popularity</h5>
                 <div id="socialMediaSlider"></div>
             </div>
         </aside>
         <section id="centralScatterplotArea" class="col-sm-7 full-height no-padding">
             <div id="scatterPlot" class="scatterPlot">
             </div>
-            <div id="yearFilter" class="yearFilter filter-area"></div>
+            <div id="yearFilter" class="yearFilter filter-area">
+                <div class="filterContainer">
+                    <h5>Year</h5>
+                    <div id="yearSlider"></div>
+                </div>
+            </div>
         </section>
         <aside id="rightFilters" class="filter-area col-sm-3 full-height .text-center">
             <div class="filterScatterplot"></div>
