Add meaningful labels to the sliders

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div id="famousSlider"></div>
             </div>
             <div class="filterContainer">
-                <h5>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1. Keep that in mind when excluding movies with this slider.">?</span></h5>
+                <h5>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1 (=in the red). Keep that in mind when excluding movies with this slider.">?</span></h5>
                 <div id="grossBudgetSlider"></div>
             </div>
             <div class="filterContainer">
