Add genre labels to genre scatterplot and improve layout

--- a/index.html
+++ b/index.html
@@ -43,31 +43,33 @@
 <main class="container-fluid">
     <div id="mainRow" class="row full-height">
         <aside id="leftFilters" class="filter-area col-sm-2 full-height">
-            <div id="visibleMoviesCounter"></div>
-            <h3>Filters</h3>
-            <div class="filterContainer">
-                <h5>Minimum Age</h5>
-                <div id="minimumAgeSlider"></div>
-            </div>
-            <div class="filterContainer">
-                <h5>Score</h5>
-                <div id="scoreSlider"></div>
-            </div>
-            <div class="filterContainer">
-                <h5>Duration</h5>
-                <div id="durationSlider"></div>
-            </div>
-            <div class="filterContainer">
-                <h5>Famousness</h5>
-                <div id="famousSlider"></div>
-            </div>
-            <div class="filterContainer">
-                <h5>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1 (=in the red). Keep that in mind when excluding movies with this slider.">?</span></h5>
-                <div id="grossBudgetSlider"></div>
-            </div>
-            <div class="filterContainer">
-                <h5>Social Media Popularity</h5>
-                <div id="socialMediaSlider"></div>
+            <div id="leftFiltersContainer">
+                <div id="visibleMoviesCounter"></div>
+                <h3>Filters</h3>
+                <div class="filterContainer">
+                    <h5>Minimum Age</h5>
+                    <div id="minimumAgeSlider"></div>
+                </div>
+                <div class="filterContainer">
+                    <h5>Score</h5>
+                    <div id="scoreSlider"></div>
+                </div>
+                <div class="filterContainer">
+                    <h5>Duration</h5>
+                    <div id="durationSlider"></div>
+                </div>
+                <div class="filterContainer">
+                    <h5>Famousness</h5>
+                    <div id="famousSlider"></div>
+                </div>
+                <div class="filterContainer">
+                    <h5>Gross per Budget<span class="infoBox" title="Due to missing data many movies have a default gross per budget value of 1 (=in the red). Keep that in mind when excluding movies with this slider.">?</span></h5>
+                    <div id="grossBudgetSlider"></div>
+                </div>
+                <div class="filterContainer">
+                    <h5>Social Media Popularity</h5>
+                    <div id="socialMediaSlider"></div>
+                </div>
             </div>
             <div id="shortcuts">
                 <h5>Shortcuts</h5>
